# atlas-packer

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
examples/: test_pack.rs  test_random_polygon.rs  test_unused_pixels.rs
src/: disjoint_set.rs  export.rs  lib.rs  pack.rs  place.rs  texture.rs
src/texture/: mod.rs  utils.rs
