[package]
name = "atlas-packer"
edition = "2021"

[dependencies]
image = { version = "0.25.1", default-features = false, features = [
  "rayon",
  "tiff",
  "jpeg",
  "webp",
  "png",
] }
thiserror = "2.0.11"
hashbrown = { version = "0.15.2", features = ["rayon"] }
stretto = "0.8.4"
rayon = "1.10.0"
sys-info = "0.9.1"
clap = { version = "4.5.27", features = ["derive"] }
rstar = "0.12.2"
webp = "0.3.0"


[dev-dependencies]
rand = "0.9.0"
tempfile = "3.10.1"
